--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
         </div>
 
         <p id="final-text" class="final-text" style="display: none">
-          <strong>Valentine Date:</strong> Meow Restaurant at 7pm. Dress fancy!
+          <strong>Countdown to Valentine’s:</strong>
+          <span id="countdown"></span>
         </p>
       </div>
     </div>
