--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     <!-- Envelope Screen -->
     <div id="envelope-container">
       <img src="envelope.png" alt="Envelope" id="envelope" />
-      <p>♡ Letter for You ♡</p>
+      <p>♡ Letter for You ♡
+        -From Kunal
+      </p>
     </div>
 
     <!-- Letter Screen -->
