--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
     <!-- Envelope Screen -->
     <div id="envelope-container">
       <img src="envelope.png" alt="Envelope" id="envelope" />
-      <p>♡ Letter for You ♡
-        -From Kunal
-      </p>
+      <p>♡ Letter for You ♡<br>-From Kunal</p>
     </div>
 
     <!-- Letter Screen -->
